Updated with version: 4.10.0 changes

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -2998,5 +2998,165 @@
   "close_help_flow": {
     "message": "Schließen Sie den Hilfefluss und kehren Sie zum Pop-up-Menü zurück.",
     "description": "Aria label for close button in help flow (in popup menu)"
+  },
+  "stats": {
+    "message": "Statistik",
+    "description": "Title of the statistics (metrics) tab of the Options page"
+  },
+  "statstitle": {
+    "message": "Statistik-Dashboard",
+    "description": "On page title of the statistics page of the Options page"
+  },
+  "stats_opt_in_header": {
+    "message": "Möchten Sie sich Ihre AdBlock-Statistik ansehen? ",
+    "description": "On page text of the statistics page of the Options page"
+  },
+  "stats_opt_in_msg": {
+    "message": "Melden Sie sich zur lokalen Datensammlung an, um Ihre AdBlock-Statistik anzusehen, zum Beispiel auf welchen Websites Sie die meisten Werbungen und Tracker blockieren, Blockierungen insgesamt im Zeitverlauf und Ersatz durch Bilder für Premium-Nutzer.",
+    "description": "On page text of the statistics page of the Options page"
+  },
+  "stats_opt_in_local_msg": {
+    "message": "Melden Sie sich auch zur lokalen Datensammlung an, um Zugriff auf alle Ihre AdBlock-Statistiken zu haben, zum Beispiel auf welchen Websites Sie die meisten Werbungen und Tracker blockieren, Blockierungen insgesamt im Zeitverlauf und Ersatz durch Bilder für Premium-Nutzer.",
+    "description": "On page text of the statistics page of the Options page"
+  },
+  "stats_already_opted": {
+    "message": "Sie haben bereits zugestimmt, anonyme Nutzungsdaten mit uns zu teilen.",
+    "description": "On page text of the statistics page of the Options page"
+  },
+  "stats_opt_in_text_button": {
+    "message": "Teilnehmen",
+    "description": "Text in the Opt In button on the statistics page of the Options page"
+  },
+  "stats_opt_in_local_text_button": {
+    "message": "Lokaler Datensammlung zustimmen",
+    "description": "Text in the Opt In button on the statistics page of the Options page"
+  },
+  "stats_opt_in_data_collect": {
+    "message": "AdBlock verbessern durch das Teilen von [[anonymen Nutzungsdaten]]",
+    "description": "Text in the Opt In button on the statistics page of the Options page"
+  },
+  "stats_ads_blocked": {
+    "message": "Blockierte Werbung",
+    "description": "Text on the statistics page of the Options page within the ads blocked panel"
+  },
+  "stats_hide_data": {
+    "message": "Daten verbergen",
+    "description": "text shown on panels during mouse over on the statistics page of the Options page within the ads blocked panel"
+  },
+  "stats_show_data": {
+    "message": "Daten anzeigen",
+    "description": "text shown on panels during mouse over on the statistics page of the Options page within the ads blocked panel"
+  },
+  "stats_trackers_blocked": {
+    "message": "Blockierte Tracker",
+    "description": "Text on the statistics page of the Options page within the ads blocked panel"
+  },
+  "stats_replaced_blocked": {
+    "message": "Ersetzte Bilder",
+    "description": "Text on the statistics page of the Options page within the ads blocked panel"
+  },
+  "trackers_cta_header": {
+    "message": "Tracker",
+    "description": "Header text on the statistics page of the Options page in the trackers panel"
+  },
+  "trackers_cta_msg": {
+    "message": "Aktivieren Sie zum Blockieren von Trackern die [[EasyPrivacy-Filterliste]]",
+    "description": "message body text on the statistics page of the Options page in the trackers panel"
+  },
+  "trackers_button_text": {
+    "message": "Aktivieren",
+    "description": "button text on the statistics page of the Options page in the trackers panel"
+  },
+  "premium_cta_msg_not_enabled": {
+    "message": "Sie haben Bildertausch nicht aktiviert.",
+    "description": "message body text on the statistics page of the Options page in the image swap panel for premium users that haven't enabled image swap"
+  },
+  "premium_cta_msg": {
+    "message": "Schalten Sie mit Premium Bildertausch-Tracking und mehr frei.",
+    "description": "message body text on the statistics page of the Options page in the image swap panel"
+  },
+  "premium_cta_button_text_not_enabled": {
+    "message": "Aktivieren",
+    "description": "button text on the statistics page of the Options page in the image swap panel for premium users that haven't enabled image swap"
+  },
+  "premium_cta_button_text": {
+    "message": "Premium erhalten",
+    "description": "button text on the statistics page of the Options page in the image swap panel"
+  },
+  "parent_menu_item_time": {
+    "message": "Blockierungen nach Zeit",
+    "description": "menu item text on the statistics page of the Options page"
+  },
+  "parent_menu_item_site": {
+    "message": "Blockierungen nach Website",
+    "description": "menu item text on the statistics page of the Options page"
+  },
+  "sub_menu_item_today": {
+    "message": "Heute",
+    "description": "sub menu item text on the statistics page of the Options page"
+  },
+  "sub_menu_item_week": {
+    "message": "Diese Woche",
+    "description": "sub menu item text on the statistics page of the Options page"
+  },
+  "sub_menu_item_month": {
+    "message": "Diesen Monat",
+    "description": "sub menu item text on the statistics page of the Options page"
+  },
+  "sub_menu_item_year": {
+    "message": "Dieses Jahr",
+    "description": "sub menu item text on the statistics page of the Options page"
+  },
+  "sub_menu_item_all": {
+    "message": "Gesamt",
+    "description": "sub menu item text on the statistics page of the Options page"
+  },
+  "delete_panel_title": {
+    "message": "Blockierungsdaten löschen",
+    "description": "title text on the delete overlay on the statistics page of the Options page"
+  },
+  "delete_detail_msg_part_I": {
+    "message": "Hier können Sie Ihre lokal gespeicherten Blockierungsdaten löschen.",
+    "description": "text on the delete overlay on the statistics page of the Options page"
+  },
+  "delete_detail_msg_part_II": {
+    "message": "Dadurch werden alle aktuell in Ihrer Statistik-Übersicht angezeigten Daten gelöscht, einschließlich der Websites mit den meisten Blockierungen.",
+    "description": "text on the delete overlay on the statistics page of the Options page"
+  },
+  "delete_detail_msg_part_III": {
+    "message": "Ihre Daten werden nur auf Ihrem Gerät gespeichert, gelöschte Daten können NICHT wiederhergestellt werden.",
+    "description": "text on the delete overlay on the statistics page of the Options page"
+  },
+  "delete_all_stats_data": {
+    "message": "Meine aktuell gespeicherten Blockierungsdaten löschen",
+    "description": "text related to the delete all data checkbox on the statistics page of the Options page"
+  },
+  "opt_out_stats_data": {
+    "message": "In Zukunft keine Blockierungsdaten sammeln",
+    "description": "text related to the opt out data collection checkbox on the statistics page of the Options page"
+  },
+  "delete_detail_page_2_msg_part_I": {
+    "message": "Sind Sie sicher?",
+    "description": "text on page 2 of the delete modal box on the statistics page of the Options page"
+  },
+  "stats_go_back_text_button": {
+    "message": "Zurück",
+    "description": "button text on page 2 of the delete modal box on the statistics page of the Options page"
+  },
+  "stats_im_sure_text_button": {
+    "message": "Ich bin sicher",
+    "description": "button text on page 2 of delete modal box on the statistics page of the Options page"
+  },
+  "no_data_title": {
+    "message": "Keine Daten",
+    "description": "title text on warning message when there's no user data to show on the statistics page of the Options page"
+  },
+  "no_data_msg_part_I": {
+    "message": "Derzeit keine Blockierungsdaten zur Anzeige vorhanden.",
+    "description": "text on warning message when there's no user data to show on the statistics page of the Options page"
+  },
+  "no_data_msg_part_II": {
+    "message": "Aktualisieren Sie diese Seite nach dem Surfen im Internet, um die Blockierungsstatistik anzuzeigen.",
+    "description": "text on warning message when there's no user data to show on the statistics page of the Options page"
   }
 }
